[gd_scene load_steps=25 format=3 uid="uid://b4cmlac4eylj4"]

[ext_resource type="Script" uid="uid://c0t7aqbkt36d1" path="res://lab5-Infinite_Runner/ground_spawner_2.gd" id="1_6eren"]
[ext_resource type="SpriteFrames" uid="uid://git0j0t7ks86" path="res://lab5-Infinite_Runner/palyer_framne.tres" id="1_bfysd"]
[ext_resource type="PackedScene" uid="uid://debbufuu1alqi" path="res://lab5-Infinite_Runner/ground.tscn" id="2_1m5b2"]
[ext_resource type="Script" uid="uid://b4w2hfbrgv0uc" path="res://lab5-Infinite_Runner/inf_player.gd" id="2_6eren"]
[ext_resource type="AudioStream" uid="uid://dla7es3dhxquy" path="res://lab5-Infinite_Runner/sound/jump.wav" id="5_ns2uo"]
[ext_resource type="Script" uid="uid://dj0f1lg1isuds" path="res://lab5-Infinite_Runner/coin.gd" id="5_yontc"]
[ext_resource type="Texture2D" uid="uid://rb1ysi8irt0" path="res://lab5-Infinite_Runner/sprites/coin.png" id="6_16tdk"]
[ext_resource type="AudioStream" uid="uid://bvvi8htacxt06" path="res://lab5-Infinite_Runner/sound/crash.wav" id="6_gv8or"]
[ext_resource type="AudioStream" uid="uid://pfi7fm726xdl" path="res://lab5-Infinite_Runner/sound/Ludum Dare 38 - Track 2.wav" id="9_0ubp1"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_3efsx"]
radius = 31.0
height = 126.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vntm8"]
size = Vector2(12.5, 12.25)

[sub_resource type="AtlasTexture" id="AtlasTexture_ns2uo"]
atlas = ExtResource("6_16tdk")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_gv8or"]
atlas = ExtResource("6_16tdk")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_0ubp1"]
atlas = ExtResource("6_16tdk")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_2a08q"]
atlas = ExtResource("6_16tdk")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_m8iek"]
atlas = ExtResource("6_16tdk")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_e36ms"]
atlas = ExtResource("6_16tdk")
region = Rect2(80, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_em10y"]
atlas = ExtResource("6_16tdk")
region = Rect2(96, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_0txxu"]
atlas = ExtResource("6_16tdk")
region = Rect2(112, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_mhxdm"]
atlas = ExtResource("6_16tdk")
region = Rect2(128, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_qawb0"]
atlas = ExtResource("6_16tdk")
region = Rect2(144, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ixsvm"]
atlas = ExtResource("6_16tdk")
region = Rect2(160, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_8wjqu"]
atlas = ExtResource("6_16tdk")
region = Rect2(176, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_wt3lr"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ns2uo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gv8or")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0ubp1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2a08q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m8iek")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e36ms")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_em10y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0txxu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mhxdm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qawb0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ixsvm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8wjqu")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="InfiniteRunner" type="Node2D"]

[node name="ground_spawner" type="Node2D" parent="."]
position = Vector2(1189, 357)
script = ExtResource("1_6eren")

[node name="timer" type="Timer" parent="ground_spawner"]
autostart = true

[node name="ground" parent="." instance=ExtResource("2_1m5b2")]
position = Vector2(220, 360)

[node name="ground2" parent="." instance=ExtResource("2_1m5b2")]
position = Vector2(423, 360)

[node name="ground3" parent="." instance=ExtResource("2_1m5b2")]
position = Vector2(634, 357)

[node name="ground4" parent="." instance=ExtResource("2_1m5b2")]
position = Vector2(843, 357)

[node name="ground5" parent="." instance=ExtResource("2_1m5b2")]
position = Vector2(1059, 355)

[node name="Player" type="CharacterBody2D" parent="."]
position = Vector2(211, 269)
script = ExtResource("2_6eren")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
shape = SubResource("CapsuleShape2D_3efsx")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Player"]
position = Vector2(0, -45)
scale = Vector2(3, 3)
sprite_frames = ExtResource("1_bfysd")
animation = &"hurt"
autoplay = "default"
frame = 3
frame_progress = 1.0

[node name="SFX" type="Node2D" parent="Player"]

[node name="jump" type="AudioStreamPlayer" parent="Player/SFX"]
stream = ExtResource("5_ns2uo")
pitch_scale = 0.01

[node name="crash" type="AudioStreamPlayer" parent="Player/SFX"]
stream = ExtResource("6_gv8or")

[node name="Coin" type="Area2D" parent="."]
position = Vector2(438, 390)
scale = Vector2(4, 4)
script = ExtResource("5_yontc")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Coin"]
position = Vector2(-3.75, -3.875)
shape = SubResource("RectangleShape2D_vntm8")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Coin"]
position = Vector2(-3.25, -4)
sprite_frames = SubResource("SpriteFrames_wt3lr")
autoplay = "default"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_0ubp1")
autoplay = true

[node name="Coin2" type="Area2D" parent="."]
position = Vector2(634, 383)
scale = Vector2(4, 4)
script = ExtResource("5_yontc")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Coin2"]
position = Vector2(-3.75, -3.875)
shape = SubResource("RectangleShape2D_vntm8")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Coin2"]
position = Vector2(-3.25, -4)
sprite_frames = SubResource("SpriteFrames_wt3lr")
autoplay = "default"

[node name="Coin3" type="Area2D" parent="."]
position = Vector2(860, 375)
scale = Vector2(4, 4)
script = ExtResource("5_yontc")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Coin3"]
position = Vector2(-3.75, -3.875)
shape = SubResource("RectangleShape2D_vntm8")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Coin3"]
position = Vector2(-3.25, -4)
sprite_frames = SubResource("SpriteFrames_wt3lr")
autoplay = "default"

[connection signal="timeout" from="ground_spawner/timer" to="ground_spawner" method="_on_timer_timeout"]
[connection signal="timeout" from="ground_spawner/timer" to="ground_spawner/timer" method="_on_timeout"]
[connection signal="animation_finished" from="Player/AnimatedSprite2D" to="Player" method="_on_animated_sprite_2d_animation_finished"]
[connection signal="body_entered" from="Coin" to="Coin" method="_on_body_entered"]
[connection signal="body_entered" from="Coin2" to="Coin2" method="_on_body_entered"]
[connection signal="body_entered" from="Coin3" to="Coin3" method="_on_body_entered"]
